--- a/calico-cloud_versioned_docs/version-18/visibility/alerts.mdx
+++ b/calico-cloud_versioned_docs/version-18/visibility/alerts.mdx
@@ -230,7 +230,7 @@ kubectl delete globalalert <global-alert-name>
 ## Additional resources
 
 - [GlobalAlert and templates](../reference/resources/globalalert.mdx)
-- Alerts for [honeypods](../threat/honeypod/index.mdx)
+- Alerts for [honeypods](../threat/honeypods.mdx)
 - Alerts for [Deep packet inspection](../threat/deeppacketinspection.mdx)
 - Alerts for [anomaly detection](../threat/security-anomalies.mdx)
 - Alerts for [suspicious IPs](../threat/suspicious-ips.mdx)
