--- a/calico-cloud_versioned_docs/version-18/visibility/kibana.mdx
+++ b/calico-cloud_versioned_docs/version-18/visibility/kibana.mdx
@@ -104,7 +104,7 @@ Once enabled, the Tigera Secure EE Tor-VPN logs dashboard can provide a view int
 
 ![honeypods-dashboard](/img/calico-enterprise/honeypods-dashboard.png)
 
-The Honeypod dashboard returns information for any workloads that connect to the Honeypod resources. Honeypods are decoys explicitly deployed to detect malicious actors who are attempting lateral movement within a cluster as a way of discovering valuable assets; this is a very credible indicator of compromise (IoC). [Honeypod resources](../threat/honeypod/honeypods.mdx) must be configured to capture Honeypod information.
+The Honeypod dashboard returns information for any workloads that connect to the Honeypod resources. Honeypods are decoys explicitly deployed to detect malicious actors who are attempting lateral movement within a cluster as a way of discovering valuable assets; this is a very credible indicator of compromise (IoC). [Honeypod resources](../threat/honeypods.mdx) must be configured to capture Honeypod information.
 
 The Honeypod dashboard returns cluster-level information on workloads that have connected to Honeypod resources. These events also generate [GlobalAlerts](../reference/resources/globalalert.mdx), which populate the Alerts table in the Manager UI.
 
