--- a/calico-enterprise/visibility/alerts.mdx
+++ b/calico-enterprise/visibility/alerts.mdx
@@ -223,7 +223,7 @@ kubectl delete globalalert <global-alert-name>
 ## Additional resources
 
 - [GlobalAlert and templates](../reference/resources/globalalert.mdx)
-- Alerts for [honeypods](../threat/honeypod/index.mdx)
+- Alerts for [honeypods](../threat/honeypods.mdx)
 - Alerts for [Deep packet inspection](../threat/deeppacketinspection.mdx)
 - Alerts for [suspicious IPs](../threat/suspicious-ips.mdx)
 - Alerts for [suspicious domains](../threat/suspicious-domains.mdx)
