--- a/calico-enterprise_versioned_docs/version-3.18/visibility/alerts.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/visibility/alerts.mdx
@@ -224,7 +224,7 @@ kubectl delete globalalert <global-alert-name>
 ## Additional resources
 
 - [GlobalAlert and templates](../reference/resources/globalalert.mdx)
-- Alerts for [honeypods](../threat/honeypod/index.mdx)
+- Alerts for [honeypods](../threat/honeypods.mdx)
 - Alerts for [Deep packet inspection](../threat/deeppacketinspection.mdx)
 - Alerts for [anomaly detection](../threat/anomaly-detection/index.mdx)
 - Alerts for [suspicious IPs](../threat/suspicious-ips.mdx)
