--- a/calico/operations/ebpf/install.mdx
+++ b/calico/operations/ebpf/install.mdx
@@ -58,13 +58,15 @@ and in particular, pushing the networking capabilities of the latest Linux kerne
 
 - IPv6
 
-IPv6 is currently (3.27) in a preview mode. It means that it was tested in common
-situations, but it is likely to have issues in other environments and that there are
-some limitations in general:
+:::note
+This feature is tech preview. Tech preview features may be subject to significant changes before they become GA.
+:::
 
-  - dual stack is not supported - however, ipv4 traffic is allowed into hosts (not workloads) as many managed k8s environments have ipv4 based control plane.
-  - doNotTrack policies (xdp) are not supported
-  - IPIP is not supported (won't be as Calico iptables does not supporte it either) - vxlan is the recomended overlay for eBPF mode.
+Limitations:
+
+  - dual stack is not supported - however, ipv4 traffic is allowed into hosts (not workloads) because many managed Kubernetes environments have ipv4-based control plane.
+  - `doNotTrack` policies (xdp) are not supported
+  - IPIP is not supported ({{prodname}} iptables does not supporte it either) - VXLAN is the recomended overlay for eBPF mode.
 
 To enable IPv6 in eBPF mode follow [Configure dual stack or IPv6 only](../../networking/ipam/ipv6.mdx). You may be able to run with non-Calico IPAM. eks-cni is known to work.
 
