--- a/calico-cloud/release-notes/index.mdx
+++ b/calico-cloud/release-notes/index.mdx
@@ -5,3 +5,5 @@ description: What's new, and why features provide value for upgrading.
 # Release notes
 
 TBD
+
+Let's talk about kubernetes and calico.
