--- a/calico-enterprise/operations/ebpf/troubleshoot-ebpf.mdx
+++ b/calico-enterprise/operations/ebpf/troubleshoot-ebpf.mdx
@@ -6,9 +6,7 @@ description: How to troubleshoot when running in eBPF mode.
 
 This document gives some general troubleshooting guidance for the eBPF dataplane.
 
-## Troubleshoot ebpf video
-
-To understand basic concepts, we recommend the following video by Tigera Engineers: [Opening the Black Box: Understanding and troubleshooting Calico's eBPF Data Plane](https://www.youtube.com/watch?v=Mh43sNBu208).
+To understand basic concepts, we recommend the following video from Tigera Engineers: [Opening the Black Box: Understanding and troubleshooting Calico's eBPF Data Plane](https://www.youtube.com/watch?v=Mh43sNBu208).
 
 ## Troubleshoot access to services
 
