--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/compatibility.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/compatibility.mdx
@@ -4,15 +4,7 @@ description: Lists versions of Calico Enterprise and Kubernetes for each platfor
 
 # Support and compatibility
 
-## Supported browsers
-
-{{prodname}} supports the latest version plus "latest minus one" versions of the following browsers:
-
-- Chrome
-- Firefox
-- Safari
-
-## Supported Platforms
+## Supported platforms
 
 The following list shows the platforms supported in this release. The tables provide a platform version history, starting with {{prodname}} 3.5. If you need an earlier version, contact Support.
 
